--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "sass/bulma-main.scss",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "css-build": "node-sass --omit-source-map-url sass/bulma-main.scss dist/css/bulma-main.css",
+    "css-build": "node-sass --omit-source-map-url sass/main.scss dist/css/main.css",
     "css-watch": "npm run css-build -- --watch",
     "start": "npm run css-watch"
   },
